# FretIQ

./: CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  TEST.cpp
